--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,7 +5,7 @@ driver:
     - ["forwarded_port", { guest: 80, host: 3434 }]
 provisioner:
   name: chef_zero
-  data_bags_path: "~/.chef/data_bags/"
+  data_bags_path: ~/.chef/data_bags/
 
 platforms:
   - name: centos-6.5
